--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/jquery": "^3.2.15",
+    "@types/lodash": "^4.14.77",
     "@types/moment": "^2.13.0",
     "@types/moment-timezone": "^0.5.0",
     "abp-ng2-module": "^1.2.4",
     "abp-web-resources": "^3.1.0",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
     "moment": "^2.19.1",
     "moment-timezone": "^0.5.13",
