--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "abp-ng2-module": "^1.2.4",
     "abp-web-resources": "^3.1.0",
     "core-js": "^2.4.1",
+    "famfamfam-flags": "^1.0.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
