--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "abp-web-resources": "^3.1.0",
     "core-js": "^2.4.1",
     "famfamfam-flags": "^1.0.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
